# winget-updater-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  ignored_packages.txt
.cargo/: config.toml
src/: main.rs
winget-updater-cli/: Cargo.toml
winget-updater-cli/src/: main.rs
winget-updater-gui/: Cargo.toml
winget-updater-gui/src/: main.rs
winget-updater-library/: Cargo.toml
winget-updater-library/src/: lib.rs
