[package]
name = "winget-updater-cli"
version = "0.1.0"
authors = ["Winfried Baumann <codewing@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
winget-updater-library = { path = "../winget-updater-library" }