[package]
name = "winget-updater-gui"
version = "0.1.0"
authors = ["Winfried Baumann <codewing@web.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winget-updater-library = { path = "../winget-updater-library" }
eframe = "0.17"