[package]
name = "winget-updater-gui"
version = "0.1.2"
authors = ["Winfried Baumann <codewing@web.de>"]
edition = "2021"

build = "build/build.rs"

[dependencies]
winget-updater-library = { path = "../winget-updater-library" }
eframe = "0.21"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
